2018-10-10	  <cerebrum@gagarin.uit.no>
	* prepared access_FS.py to use UTF-8
	
2018-08-21	  <cerebrum@gagarin.uit.no>
	* Constants.py added constant system_kr_reg. to be used as a source system for CIM phone numbers
				   added constant system_intern_ice to be used as a source system for CIM phone numbers
				   added constant contact_ice_phone to be used as a contact info code for CIM phone numbers

2018-06-28    <cerebrum@gagarin.uit.no>

	* access_FS.py (_list_gyldigopptak): UiT needs to create accounts for new students earlier than the +14 days from sps.dato_studierett_tildelt which is currently in use. 
	The value 14 has now been changed to 80(days)
2018-06-06    <cerebrum@gagarin.uit.no>

	* bofhd_uit_cmds.py
	(BofhdExtension._person_affiliation_add_helper): initially bofd
	does not support adding student/ansatt affiliation on
	persons. unfortunately uit needs this now. we have a case where a
	person is not employed by UiT, but the person needs propper
	employee access and the only we can do this is to import the
	person via system-x and then set propper ansatt affiliation via
	bofhd. removing this constraint now

2018-05-23    <cerebrum@cleomedes.uit.no>

	* Person.py (UiTPersonMixin.list_persons_name): this function was
	removed in new Person.py. since uit has several scripts using this
	function, it was added in our uit Person module

2018-04-24  Karen   <cerebrum@gagarin.uit.no>

    * access_FS.py: Merged uio version of this file into our version of it.

    * access_FS.py (undervisning.list_studenter_alle_kull): Students with studentstatkode 'DELTID' 
    are now included in the results from this method.

2018-03-15    <cerebrum@gagarin.uit.no>

	* Constants.py (Constants): Added 2 new constants
	contact_sito_mobile and contact_uit_mobile. these are needed to
	differentiate between sito and uit skype phonenumbers (for those
	with 2 accounts).

2018-03-02    <cerebrum@gagarin.uit.no>
